install(FILES Acquirer DESTINATION include/lisle)
install(FILES Anondle DESTINATION include/lisle)
install(FILES Barrier DESTINATION include/lisle)
install(FILES Condition DESTINATION include/lisle)
install(FILES Countic DESTINATION include/lisle)
install(FILES create DESTINATION include/lisle)
install(FILES Duration DESTINATION include/lisle)
install(FILES Event DESTINATION include/lisle)
install(FILES exceptions DESTINATION include/lisle)
install(FILES EXI DESTINATION include/lisle)
install(FILES Handle DESTINATION include/lisle)
install(FILES Local DESTINATION include/lisle)
install(FILES Mutex DESTINATION include/lisle)
install(FILES Once DESTINATION include/lisle)
install(FILES Releaser DESTINATION include/lisle)
install(FILES Retex DESTINATION include/lisle)
install(FILES Schedule DESTINATION include/lisle)
install(FILES self DESTINATION include/lisle)
install(FILES Semaphore DESTINATION include/lisle)
install(FILES Shorex DESTINATION include/lisle)
install(FILES Strand DESTINATION include/lisle)
install(FILES Strid DESTINATION include/lisle)
install(FILES Thread DESTINATION include/lisle)
install(FILES Thrid DESTINATION include/lisle)
